syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

service ApiService {
  rpc CreateSession(CreateSessionReq) returns (CreateSessionResp) {}
  rpc ValidateSession(ValidateSessionReq) returns (ValidateSessionResp) {}
  // rpc GetUserIdFromSession(GetUserIdFromSessionReq) returns (GetUserIdFromSessionResp);
}

message Session {
  string token = 1;
}

message CreateSessionReq {
  string user_id = 1;
}
message CreateSessionResp {
    string token = 1;
}

message ValidateSessionReq {
  string token = 1;
}
message ValidateSessionResp {
  string user_id = 1;
}

// message GetUserIdFromSessionReq {
//   string token = 1;
// }
// message GetUserIdFromSessionResp {
//   string user_id = 1;
// }
